Opa plugin: porting test in progress